# rx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  mise.toml
.claude-plugin/: plugin.json
.ctx/: HANDOFF.rx-install.rx.yaml  HANDOFF.rx.rx.yaml
.ctx/scripts/: preflight.rs
.github/workflows/: ci.yml  slash-commands.yml
crates/rx-core/: Cargo.toml
crates/rx-core/src/: lib.rs
crates/rx-install/: Cargo.toml  README.md
crates/rx-install/src/: main.rs
crates/rx-registry-json/: Cargo.toml  README.md
crates/rx-registry-json/src/: lib.rs
crates/rx-script-core/: Cargo.toml  README.md
crates/rx-script-core/src/: lib.rs
crates/rxx/: Cargo.toml  README.md
crates/rxx/src/: main.rs
examples/: demo.sh  hello.rs  smoke.sh
examples/scripts/: hello-bash.sh  hello-fish.fish  hello-javascript.js  hello-nushell.nu  hello-python.py  hello-rust.rs  hello-typescript.ts  hello-zsh.zsh
scripts/: preflight.rs  preflight.sh
skills/rx-dev/: SKILL.md
skills/rx-dev/references/: architecture-notes.md  runtime-table.md
skills/rx-install/: SKILL.md
skills/rx-registry/: SKILL.md
skills/rx-script-authoring/: SKILL.md
src/: lib.rs  main.rs
