[workspace]
members = [
    "crates/rx-script-core",
    "crates/rx-registry-json",
    "crates/rx-install",
    "crates/rxx",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/89jobrien/rx"
repository = "https://github.com/89jobrien/rx"

