[package]
name = "rx-install"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Install compatible scripts from local directories, files, and URLs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
rx-core = { path = "../rx-core" }
rx-registry-json = { path = "../rx-registry-json" }

[[bin]]
name = "rx"
path = "src/main.rs"

