[package]
name = "rx-install"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Install compatible scripts from local directories, files, and URLs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
rx-script-core = { path = "../rx-script-core" }
rx-registry-json = { path = "../rx-registry-json" }
shell-words = "1.1.0"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "rx"
path = "src/main.rs"
