[package]
name = "rxx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Execute compatible scripts directly"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
rx-core = { path = "../rx-core" }

[[bin]]
name = "rxx"
path = "src/main.rs"

