[package]
name = "rx-rxx"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Execute compatible scripts directly"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
rx-script-core = { path = "../rx-script-core", version = "0.1.0" }
rx-registry-json = { path = "../rx-registry-json", version = "0.1.0" }

[[bin]]
name = "rxx"
path = "src/main.rs"

